--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - v*
 
 jobs:
-  build:
+  generate-schema:
     name: Build customized Caddy
     runs-on: ubuntu-latest
     steps:
@@ -24,6 +24,7 @@ jobs:
   dockerize:
     name: Build docker containers
     runs-on: ubuntu-latest
+    needs: generate-schema
     permissions:
       packages: write
       contents: read
