--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Download math result for build
+      - name: Download latest schema
         uses: actions/download-artifact@v3
         with:
           name: caddy-schema
@@ -54,7 +54,7 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
-            ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
   # releases-matrix:
   #   name: Release Go Binary
   #   runs-on: ubuntu-latest
