--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
         with:
           name: caddy-schema
           path: public/caddy_schema.json
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
